# rich-presence-mpris

./: Cargo.toml  README.md  rust-toolchain.toml
src/: main.rs  main.rs.bak
